--- a/.env
+++ b/.env
@@ -4,34 +4,12 @@ DB_PASSWORD=
 DB_NAME=tv_app
 PORT=3000
 MONGO_INITDB_ROOT_PASSWORD=LopWjGsoYuxvsacsnvzyYlmTOXxIIlvU
-
-
-
 MONGO_INITDB_ROOT_USERNAME=mongo
-
-
-
 MONGO_PUBLIC_URL=mongodb://mongo:LopWjGsoYuxvsacsnvzyYlmTOXxIIlvU@monorail.proxy.rlwy.net:10314
-
-
-
-
 MONGO_URL=mongodb://mongo:LopWjGsoYuxvsacsnvzyYlmTOXxIIlvU@mongodb.railway.internal:27017
-
-
-
-MONGOHOST=mongodb.railway.internal
-
-
-
+MONGOHOST=monorail.proxy.rlwy.net
 MONGOPASSWORD=LopWjGsoYuxvsacsnvzyYlmTOXxIIlvU
-
-
-
-MONGOPORT=27017
-
-
-
+MONGOPORT=10314
 MONGOUSER=mongo
 
 
