--- a/.env
+++ b/.env
@@ -11,6 +11,6 @@ MONGOHOST=monorail.proxy.rlwy.net
 MONGOPASSWORD=LopWjGsoYuxvsacsnvzyYlmTOXxIIlvU
 MONGOPORT=10314
 MONGOUSER=mongo
-
+FRONTEND_URL=https://macicast.vercel.app
 
 
