--- a/.env
+++ b/.env
@@ -13,4 +13,13 @@ MONGOPORT=10314
 MONGOUSER=mongo
 FRONTEND_URL=https://macicast.vercel.app
 
+# AWS Configuration
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your_access_key
+AWS_SECRET_ACCESS_KEY=your_secret_key
+AWS_BUCKET_NAME=your_bucket_name
+
+# URLs
+BACKEND_URL=https://macicast-backend.onrender.com
+
 
