--- a/.env
+++ b/.env
@@ -22,4 +22,9 @@ AWS_BUCKET_NAME=your_bucket_name
 # URLs
 BACKEND_URL=https://macicast-backend.onrender.com
 
+# Stream configuration
+STREAM_PROVIDER=test # or 'mux', 's3', etc.
+MUX_TOKEN_ID=your_token_id
+MUX_TOKEN_SECRET=your_token_secret
+
 
