--- a/.env
+++ b/.env
@@ -19,6 +19,12 @@ AWS_ACCESS_KEY_ID=your_access_key
 AWS_SECRET_ACCESS_KEY=your_secret_key
 AWS_BUCKET_NAME=your_bucket_name
 
+# AWS S3 Configuration for video uploads
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your_access_key_here
+AWS_SECRET_ACCESS_KEY=your_secret_key_here
+AWS_BUCKET_NAME=your-bucket-name
+
 # URLs
 BACKEND_URL=https://macicast-backend.onrender.com
 
