--- a/.env
+++ b/.env
@@ -3,11 +3,10 @@ DB_USER=root
 DB_PASSWORD=
 DB_NAME=tv_app
 PORT=3000
-
 MONGO_INITDB_ROOT_PASSWORD=MFxVuqbfxSckyL2G
 MONGO_INITDB_ROOT_USERNAME=yarmaciercanyasin
-MONGO_PUBLIC_URL=mongodb+srv://yarmaciercanyasin:MFxVuqbfxSckyL2G@macicast.jf27xhq.mongodb.net/?retryWrites=true&w=majority&appName=macicast
-MONGO_URL=mongodb+srv://yarmaciercanyasin:MFxVuqbfxSckyL2G@macicast.jf27xhq.mongodb.net/?retryWrites=true&w=majority&appName=macicast
+MONGO_PUBLIC_URL=mongodb+srv://yarmaciercanyasin:MFxVuqbfxSckyL2G@macicast.jf27xhq.mongodb.net/macidb?retryWrites=true&w=majority&appName=macicast
+MONGO_URL=mongodb+srv://yarmaciercanyasin:MFxVuqbfxSckyL2G@macicast.jf27xhq.mongodb.net/macidb?retryWrites=true&w=majority&appName=macicast
 MONGOHOST=macicast.jf27xhq.mongodb.net
 MONGOPASSWORD=MFxVuqbfxSckyL2G
 MONGOPORT=27017
