--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "mux-node": "^8.0.0",
+    "ytdl-core": "^4.11.5",
+    "youtube-search-api": "^1.2.1",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
