--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ DB_NAME=tv_app
 PORT=3000
 MONGO_INITDB_ROOT_PASSWORD=MFxVuqbfxSckyL2G
 MONGO_INITDB_ROOT_USERNAME=yarmaciercanyasin
-MONGO_PUBLIC_URL=mongodb+srv://your-mongo-atlas-url
-MONGO_URL=mongodb://localhost:27017/macicast
+MONGO_PUBLIC_URL=mongodb+srv://yarmaciercanyasin:ercan02.@macicast.jf27xhq.mongodb.net/macidb?retryWrites=true&w=majority&appName=macicast
+MONGO_URL=mongodb+srv://yarmaciercanyasin:ercan02.@macicast.jf27xhq.mongodb.net/macidb?retryWrites=true&w=majority&appName=macicast
 MONGOHOST=macicast.jf27xhq.mongodb.net
 MONGOPASSWORD=MFxVuqbfxSckyL2G
 MONGOPORT=27017
@@ -29,7 +29,5 @@ YOUTUBE_API_KEY=AIzaSyAq3SvXxTokuakmICcBeJMqYCyf0pxz1TE
 
 # Environment
 NODE_ENV=production
-
-JWT_SECRET=macicast-jwt-secret-key-change-in-production
 
 
