--- a/render.yaml
+++ b/render.yaml
@@ -11,9 +11,7 @@ services:
         value: production
       - key: PORT
         value: 3000
-      - key: JWT_SECRET
-        fromGroup: macicast-secrets
       - key: MONGO_PUBLIC_URL
-        fromGroup: macicast-secrets
+        value: "mongodb+srv://yarmaciercanyasin:ercan02.@macicast.jf27xhq.mongodb.net/macidb?retryWrites=true&w=majority&appName=macicast"
       - key: BACKEND_URL
         value: https://macicast-backend.onrender.com 
